# autoresearch-trading

./: README.md  agent.py  base_strategy.py  program_trade.md  pyproject.toml  strategy.py  strategy_helpers.py  trading.py
results/: README.md  details.json  strategyMinimax27.py  summary.tsv
