[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "autoresearch_trading"
version = "0.1.1"
description = "Autonomous LLM-guided trading strategy research with walk-forward validation"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
keywords = ["ai", "autoresearch", "fcmaes", "numba", "trading", "walk-forward"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
]
dependencies = [
    "fcmaes",
    "loguru",
    "numba",
    "numpy",
    "openai",
    "pandas",
    "scipy",
    "yfinance",
]

[tool.setuptools]
py-modules = ["agent", "base_strategy", "strategy", "strategy_helpers", "trading"]
